repaired form displaying problems on mobile

--- a/src/scss/utils/fullSize/_contact-section.scss
+++ b/src/scss/utils/fullSize/_contact-section.scss
@@ -136,13 +136,20 @@
         justify-content: center;
         align-items: center;
 
-        .input-box, .button-box {
+        .input-box, .button-box, .errors-box {
             width: 30.3rem;
             height: 3.3rem;
             margin: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        .errors-box {
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            height: 100px;
         }
 
         .textarea-box {
@@ -199,6 +206,15 @@
             height: 2.9rem;
         }
 
+        .wrongName, .wrongEmail, .wrongMessage, .emptyForm {
+            color: $btn-color;
+            font-size: 14px;
+            font-weight: 600;
+            margin-top: 2px;
+            padding-left: 10px;
+            display: none;
+        }
+
 
     }
 }
@@ -231,10 +247,6 @@
         font-size: 30px;
         color: $txt-color;
         cursor: pointer;
-        // animation-name: icons-animation;
-        // animation-duration: 0.5s;
-        // animation-iteration-count: 1;
-        // animation-delay: 1s;
     }
 
     .fa-linkedin {
