--- a/src/scss/utils/mobile/_contact-section-mobile.scss
+++ b/src/scss/utils/mobile/_contact-section-mobile.scss
@@ -1,18 +1,18 @@
 @media (max-width: 420px) {
     div.contact-main-box {
         width: 100%;
-        height: 140vh;
+        height: auto;
         flex-direction: column-reverse;
     
         div.form-box {
             width: 100%;
-            height: 50%;
+            height: auto;
 
             .headers-box {
                 width: 100%;
                 justify-content: center;
                 margin: 0;
-                padding: 20px 0 20px 0;
+                margin: 10px 0 10px 0;
 
                 h3 {
                     text-align: center;
@@ -25,13 +25,10 @@
             form {
                 width: 100%;
 
-                .input-box, .button-box, .textarea-box {
+                .input-box, .button-box, .textarea-box, .errors-box {
                     width: 100%;
 
-                    input {
-                        width: 100%;
-                    }
-                    textarea {
+                    input, textarea, span{
                         width: 100%;
                     }
                 }
@@ -40,8 +37,7 @@
 
         .left-box {
             width: 100%;
-            height: 50%;
-            padding-top: 40px;
+            height: auto;
 
             h3 {
                 margin: 0;
